<resources>
    <string name="app_name">NikuAppen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NikuAppen</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu">Boards</string>
    <string name="menu_home">Home</string>
    <string name="menu_fridge">Fridge</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_transport">Transport</string>
    <string name="sub_menu">Other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="settings_english">English</string>
    <string name="settings_swedish">Svenska</string>
    <string name="settings_theme">Theme</string>

    <string name="about_text">This app is still in its early development, but hopefully updates will be coming out regularly to get the functions working.</string>
</resources>
